- Implemented ExpressionDescriptor - Changed default parser Options - The parser now rewrites unspecified ranges so that they can be parsed without exceptions "/N" -> "*/N" - Rewritten localizations to enforce leading white spaces and support Java's String.format() patterns - Added days of the week and months' names to localization resources since we use their ordinals in our enums to identify them and the sequence doesn't match Java's default indices

--- a/src/main/resources/localization_it.properties
+++ b/src/main/resources/localization_it.properties
@@ -1,48 +1,67 @@
+SUN=Domenica
+MON=Lunedì
+TUE=Martedì
+WED=Mercoledì
+THU=Giovedì
+FRI=Venerdì
+SAT=Sabato
+JAN=Gennaio
+FEB=Febbraio
+MAR=Marzo
+APR=Aprile
+MAY=Maggio
+JUN=Giugno
+JUL=Luglio
+AUG=Agosto
+SEP=Settembre
+OCT=Ottobre
+NOV=Novembre
+DEC=Dicembre
 EveryMinute=ogni minuto
 EveryHour=every hour
 AnErrorOccuredWhenGeneratingTheExpressionD=Errore durante la generazione la descrizione. Controllare la sintassi dell'espressione.
-AtSpace=Alle 
-EveryMinuteBetweenX0AndX1=Ogni minuto tra le {0} e le {1}
+AtSpace=Alle\u0020
+EveryMinuteBetweenX0AndX1=Ogni minuto tra le %s e le %s
 At=Alle
-SpaceAnd= e
+SpaceAnd=\u0020e
 EverySecond=ogni secondo
-EveryX0Seconds=ogni {0} secondi
-SecondsX0ThroughX1PastTheMinute=secondi dal {0} al {1} oltre il minuto
-AtX0SecondsPastTheMinute=al {0} secondo passato il minuto
-EveryX0Minutes=ogni {0} minuti
-MinutesX0ThroughX1PastTheHour=minuti dal {0} al {1} dopo l'ora
-AtX0MinutesPastTheHour=al {0} minuto passata l'ora
-EveryX0Hours=ogni {0} ore
-BetweenX0AndX1=tra le {0} e le {1}
-AtX0=alle {0}
+EveryX0Seconds=ogni %s secondi
+SecondsX0ThroughX1PastTheMinute=secondi dal %s al %s oltre il minuto
+AtX0SecondsPastTheMinute=al %s secondo passato il minuto
+EveryX0Minutes=ogni %s minuti
+MinutesX0ThroughX1PastTheHour=minuti dal %s al %s dopo l'ora
+AtX0MinutesPastTheHour=al %s minuto passata l'ora
+EveryX0Hours=ogni %s ore
+BetweenX0AndX1=tra le %s e le %s
+AtX0=alle %s
 ComaEveryDay=, ogni giorno
-ComaEveryX0DaysOfTheWeek=, ogni {0} giorni della settimana
-ComaX0ThroughX1=, dal {0} al {1}
+ComaEveryX0DaysOfTheWeek=, ogni %s giorni della settimana
+ComaX0ThroughX1=, dal %s al %s
 First=primo
 Second"=secondo
 Third=terzo
 Fourth=quarto
 Fifth=quinto
-ComaOnThe=, il 
-SpaceX0OfTheMonth={0} del mese
-ComaOnTheLastX0OfTheMonth=, l'ultimo {0} del mese
-ComaOnlyOnX0=, solo il {0}
-ComaEveryX0Months=, ogni {0} mesi
-ComaOnlyInX0=, solo in {0}
+ComaOnTheSpace=, il\u0020
+SpaceX0OfTheMonth=\u0020%s del mese
+ComaOnTheLastX0OfTheMonth=, l'ultimo %s del mese
+ComaOnlyOnX0=, solo il %s
+ComaEveryX0Months=, ogni %s mesi
+ComaOnlyInX0=, solo in %s
 ComaOnTheLastDayOfTheMonth=, l'ultimo giorno del mese
 ComaOnTheLastWeekdayOfTheMonth=, nell'ultima settimana del mese
 FirstWeekday=primo giorno della settimana
-WeekdayNearestDayX0=giorno della settimana più vicino al {0}
-ComaOnTheX0OfTheMonth=, il {0} del mese
-ComaEveryX0Days=, ogni {0} giorni
-ComaBetweenDayX0AndX1OfTheMonth=, tra il giorno {0} e {1} del mese
-ComaOnDayX0OfTheMonth=, il giorno {0} del mese
-SpaceAndSpace= e 
+WeekdayNearestDayX0=giorno della settimana più vicino al %s
+ComaOnTheX0OfTheMonth=, il %s del mese
+ComaEveryX0Days=, ogni %s giorni
+ComaBetweenDayX0AndX1OfTheMonth=, tra il giorno %s e %s del mese
+ComaOnDayX0OfTheMonth=, il giorno %s del mese
+SpaceAndSpace=\u0020e\u0020
 ComaEveryMinute=, ogni minuto
 ComaEveryHour=, ogni ora
-ComaEveryX0Years=, ogni {0} anni
-CommaStartingX0=, a partire dal {0}
+ComaEveryX0Years=, ogni %s anni
+CommaStartingX0=, a partire dal %s
 AMPeriod=AM
 PMPeriod=PM
-CommaDaysBeforeTheLastDayOfTheMonth=, {0} days before the last day of the month
-ComaOnlyInYearX0=, solo nel {0}
+CommaDaysBeforeTheLastDayOfTheMonth=, %s days before the last day of the month
+ComaOnlyInYearX0=, solo nel %s
