- Added missing static method to set a default locale - Updated README - Fixed missing translation in localization_it.properties - Added tests for default locale

--- a/src/main/resources/localization_it.properties
+++ b/src/main/resources/localization_it.properties
@@ -63,5 +63,5 @@ ComaEveryX0Years=, ogni %s anni
 CommaStartingX0=, a partire dal %s
 AMPeriod=AM
 PMPeriod=PM
-CommaDaysBeforeTheLastDayOfTheMonth=, %s days before the last day of the month
+CommaDaysBeforeTheLastDayOfTheMonth=, %s giorni prima dell'ultimo giorno del mese
 ComaOnlyInYearX0=, solo nel %s
