- Improved italian localization - Exposed configured options via getter for ExpressionDescriptor instances

--- a/src/main/resources/localization_it.properties
+++ b/src/main/resources/localization_it.properties
@@ -30,7 +30,7 @@ SecondsX0ThroughX1PastTheMinute=secondi dal %s al %s oltre il minuto
 AtX0SecondsPastTheMinute=al %s secondo passato il minuto
 EveryX0Minutes=ogni %s minuti
 MinutesX0ThroughX1PastTheHour=minuti dal %s al %s dopo l'ora
-AtX0MinutesPastTheHour=al %s minuto passata l'ora
+AtX0MinutesPastTheHour=al minuto %s passata l'ora
 EveryX0Hours=ogni %s ore
 BetweenX0AndX1=tra le %s e le %s
 AtX0=alle %s
