- Added maven publishing task and cleaned up build.gradle - Fixed typo in the italian localization_it.properties

--- a/src/main/resources/localization_it.properties
+++ b/src/main/resources/localization_it.properties
@@ -38,7 +38,7 @@ ComaEveryDay=, ogni giorno
 ComaEveryX0DaysOfTheWeek=, ogni %s giorni della settimana
 ComaX0ThroughX1=, dal %s al %s
 First=primo
-Second"=secondo
+Second=secondo
 Third=terzo
 Fourth=quarto
 Fifth=quinto
