- Added sources and Javadoc to the build task - Added missing SCM to the publication specs - Replaced special characters with their utf-8 codes in localization_it.properties - Added missing Javadoc descriptions

--- a/src/main/resources/localization_it.properties
+++ b/src/main/resources/localization_it.properties
@@ -1,9 +1,9 @@
 SUN=Domenica
-MON=Lunedì
-TUE=Martedì
-WED=Mercoledì
-THU=Giovedì
-FRI=Venerdì
+MON=Luned\u00EC
+TUE=Marted\u00EC
+WED=Mercoled\u00EC
+THU=Gioved\u00EC
+FRI=Venerd\u00EC
 SAT=Sabato
 JAN=Gennaio
 FEB=Febbraio
