Added new localizations

--- a/src/main/resources/localization_it.properties
+++ b/src/main/resources/localization_it.properties
@@ -17,51 +17,51 @@ SEP=Settembre
 OCT=Ottobre
 NOV=Novembre
 DEC=Dicembre
-EveryMinute=ogni minuto
-EveryHour=every hour
-AnErrorOccuredWhenGeneratingTheExpressionD=Errore durante la generazione la descrizione. Controllare la sintassi dell'espressione.
+EveryMinute=ogni\u0020minuto
+EveryHour=every\u0020hour
+AnErrorOccuredWhenGeneratingTheExpressionD=Errore\u0020durante\u0020la\u0020generazione\u0020la\u0020descrizione.\u0020Controllare\u0020la\u0020sintassi\u0020dell'espressione.
 AtSpace=Alle\u0020
-EveryMinuteBetweenX0AndX1=Ogni minuto tra le %s e le %s
+EveryMinuteBetweenX0AndX1=Ogni\u0020minuto\u0020tra\u0020le\u0020%s\u0020e\u0020le\u0020%s
 At=Alle
 SpaceAnd=\u0020e
-EverySecond=ogni secondo
-EveryX0Seconds=ogni %s secondi
-SecondsX0ThroughX1PastTheMinute=secondi dal %s al %s oltre il minuto
-AtX0SecondsPastTheMinute=al %s secondo passato il minuto
-EveryX0Minutes=ogni %s minuti
-MinutesX0ThroughX1PastTheHour=minuti dal %s al %s dopo l'ora
-AtX0MinutesPastTheHour=al minuto %s passata l'ora
-EveryX0Hours=ogni %s ore
-BetweenX0AndX1=tra le %s e le %s
-AtX0=alle %s
-ComaEveryDay=, ogni giorno
-ComaEveryX0DaysOfTheWeek=, ogni %s giorni della settimana
-ComaX0ThroughX1=, dal %s al %s
+EverySecond=ogni\u0020secondo
+EveryX0Seconds=ogni\u0020%s\u0020secondi
+SecondsX0ThroughX1PastTheMinute=secondi\u0020dal\u0020%s\u0020al\u0020%s\u0020oltre\u0020il\u0020minuto
+AtX0SecondsPastTheMinute=al\u0020%s\u0020secondo\u0020passato\u0020il\u0020minuto
+EveryX0Minutes=ogni\u0020%s\u0020minuti
+MinutesX0ThroughX1PastTheHour=minuti\u0020dal\u0020%s\u0020al\u0020%s\u0020dopo\u0020l'ora
+AtX0MinutesPastTheHour=al\u0020minuto\u0020%s\u0020passata\u0020l'ora
+EveryX0Hours=ogni\u0020%s\u0020ore
+BetweenX0AndX1=tra\u0020le\u0020%s\u0020e\u0020le\u0020%s
+AtX0=alle\u0020%s
+ComaEveryDay=,\u0020ogni\u0020giorno
+ComaEveryX0DaysOfTheWeek=,\u0020ogni\u0020%s\u0020giorni\u0020della\u0020settimana
+ComaX0ThroughX1=,\u0020dal\u0020%s\u0020al\u0020%s
 First=primo
 Second=secondo
 Third=terzo
 Fourth=quarto
 Fifth=quinto
-ComaOnTheSpace=, il\u0020
-SpaceX0OfTheMonth=\u0020%s del mese
-ComaOnTheLastX0OfTheMonth=, l'ultimo %s del mese
-ComaOnlyOnX0=, solo il %s
-ComaEveryX0Months=, ogni %s mesi
-ComaOnlyInX0=, solo in %s
-ComaOnTheLastDayOfTheMonth=, l'ultimo giorno del mese
-ComaOnTheLastWeekdayOfTheMonth=, nell'ultima settimana del mese
-FirstWeekday=primo giorno della settimana
-WeekdayNearestDayX0=giorno della settimana più vicino al %s
-ComaOnTheX0OfTheMonth=, il %s del mese
-ComaEveryX0Days=, ogni %s giorni
-ComaBetweenDayX0AndX1OfTheMonth=, tra il giorno %s e %s del mese
-ComaOnDayX0OfTheMonth=, il giorno %s del mese
+ComaOnTheSpace=,\u0020il\u0020
+SpaceX0OfTheMonth=\u0020%s\u0020del\u0020mese
+ComaOnTheLastX0OfTheMonth=,\u0020l'ultimo\u0020%s\u0020del\u0020mese
+ComaOnlyOnX0=,\u0020solo\u0020il\u0020%s
+ComaEveryX0Months=,\u0020ogni\u0020%s\u0020mesi
+ComaOnlyInX0=,\u0020solo\u0020in\u0020%s
+ComaOnTheLastDayOfTheMonth=,\u0020l'ultimo\u0020giorno\u0020del\u0020mese
+ComaOnTheLastWeekdayOfTheMonth=,\u0020nell'ultima\u0020settimana\u0020del\u0020mese
+FirstWeekday=primo\u0020giorno\u0020della\u0020settimana
+WeekdayNearestDayX0=giorno\u0020della\u0020settimana\u0020più\u0020vicino\u0020al\u0020%s
+ComaOnTheX0OfTheMonth=,\u0020il\u0020%s\u0020del\u0020mese
+ComaEveryX0Days=,\u0020ogni\u0020%s\u0020giorni
+ComaBetweenDayX0AndX1OfTheMonth=,\u0020tra\u0020il\u0020giorno\u0020%s\u0020e\u0020%s\u0020del\u0020mese
+ComaOnDayX0OfTheMonth=,\u0020il\u0020giorno\u0020%s\u0020del\u0020mese
 SpaceAndSpace=\u0020e\u0020
-ComaEveryMinute=, ogni minuto
-ComaEveryHour=, ogni ora
-ComaEveryX0Years=, ogni %s anni
-CommaStartingX0=, a partire dal %s
+ComaEveryMinute=,\u0020ogni\u0020minuto
+ComaEveryHour=,\u0020ogni\u0020ora
+ComaEveryX0Years=,\u0020ogni\u0020%s\u0020anni
+CommaStartingX0=,\u0020a\u0020partire\u0020dal\u0020%s
 AMPeriod=AM
 PMPeriod=PM
-CommaDaysBeforeTheLastDayOfTheMonth=, %s giorni prima dell'ultimo giorno del mese
-ComaOnlyInYearX0=, solo nel %s
+CommaDaysBeforeTheLastDayOfTheMonth=,\u0020%s\u0020giorni\u0020prima\u0020dell'ultimo\u0020giorno\u0020del\u0020mese
+ComaOnlyInYearX0=,\u0020solo\u0020nel\u0020%s
